<feat> update route AuthController and path
